--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     // READING JSON DUMMY DATA FILE
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    //implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
 }
