--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,13 @@ dependencies {
         exclude module: 'recyclerview-v7'
     })
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     testImplementation 'junit:junit:4.12'
+
+    // CORE
+    androidTestImplementation 'androidx.test:core:1.0.0'
 
     // SUPPORT
     implementation 'com.android.support:design:28.0.0'
