--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,9 @@ dependencies {
 
     // ADDONS
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    //testImplementation 'com.squareup.okhttp3:mockwebserver:3.2.0'
+    androidTestImplementation ('com.squareup.okhttp:mockwebserver:2.7.0')
 
     // RETROFIT
     implementation 'com.google.code.gson:gson:2.8.2'
