--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.grammiegramco.grammiegram_android">
+    package="com.grammiegram.grammiegram_android">
 
     <application
         android:allowBackup="true"
