--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.grammiegram.grammiegram_android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- for testing under no wifi -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- remove default title bar so we can add custom tool bar -->
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_launcher_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_launcher_logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activities.BoardListActivity" />
         <activity
             android:name=".activities.BoardActivity"
-            android:label="@string/title_activity_board"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".activities.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:name=".activities.LoginActivity">
+            <!-- Login is launching activity (immediatly launches others if token is already present) -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
