--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,14 +68,14 @@ dependencies {
 
     // ADDONS
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    //implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1' //interceptor TODO: delete
+    //implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1' //interceptor TODO: delete
     androidTestImplementation('com.squareup.okhttp:mockwebserver:2.7.0')
 
     // RETROFIT
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     // BUTTERKNIFE
     implementation 'com.jakewharton:butterknife:8.5.1'
