--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".activities.BoardActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".activities.LoginActivity">
+            android:name=".activities.SignInActivity">
             <!-- Login is launching activity (immediatly launches others if token is already present) -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
