--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,6 @@
     package="com.grammiegram.grammiegram_android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- for testing under no wifi -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- remove default title bar so we can add custom tool bar -->
-
 
     <application
         android:allowBackup="true"
@@ -25,13 +17,14 @@
         <activity
             android:name=".activities.BoardActivity"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".activities.SignInActivity">
+        <activity android:name=".activities.SignInActivity">
             <!-- Login is launching activity (immediatly launches others if token is already present) -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
+
 </manifest>
